[gd_scene load_steps=37 format=2]

[ext_resource path="res://art/chest.png" type="Texture" id=1]
[ext_resource path="res://LootBox.gd" type="Script" id=2]
[ext_resource path="res://art/flash_light_box.png" type="Texture" id=3]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/heart.png" type="Texture" id=5]
[ext_resource path="res://art/speedUP.png" type="Texture" id=6]
[ext_resource path="res://art/shield_icon.png" type="Texture" id=7]
[ext_resource path="res://art/clock-tick.wav" type="AudioStream" id=8]
[ext_resource path="res://art/spacebar_instruct.png" type="Texture" id=9]
[ext_resource path="res://art/chest_gold.png" type="Texture" id=10]
[ext_resource path="res://art/slowmo.png" type="Texture" id=11]
[ext_resource path="res://art/gun.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "gold",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "flash",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "icons",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 4 )

[node name="LootBox" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )

[node name="Flash" type="AnimatedSprite" parent="."]
position = Vector2( 10, -99 )
scale = Vector2( 1.14063, 1.07813 )
frames = SubResource( 14 )
animation = "flash"

[node name="PowerIcon" type="AnimatedSprite" parent="."]
position = Vector2( 0, -31 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 16 )
animation = "icons"
speed_scale = 5.0

[node name="tick" type="AudioStreamPlayer" parent="PowerIcon"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Instruction" type="Sprite" parent="."]
position = Vector2( -245, -53 )
texture = ExtResource( 9 )

[node name="Button" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -81.0
margin_top = 78.0
margin_right = 80.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 15 )
text = "Resume"
__meta__ = {
"_editor_description_": ""
}

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="PowerIcon" to="." method="_on_PowerIcon_frame_changed"]
